--- a/package.json
+++ b/package.json
@@ -15,8 +15,16 @@
   "dependencies": {
     "babel-cli": "^6.4.0",
     "babel-core": "^6.22.1",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "bluebird": "^3.5.0",
+    "bootstrap": "^3.3.7",
+    "css-loader": "^0.19.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
+    "material-ui": "^0.17.1",
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0",
+    "react-tap-event-plugin": "^2.0.1",
+    "style-loader": "^0.12.4"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
